[package]
name = "tysiac-engine"
version = "0.1.0"
authors = ["Sheyne Anderson <sheyne@sheyne.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tysiac = { path = "../tysiac" }
card-games-lib = { path = "../card-games-lib" }
