[package]
name = "tysiac"
version = "0.1.0"
authors = ["Sheyne Anderson <sheyne@sheyne.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
card-games-lib = {path = "../card-games-lib"}
ranged-num = "0.1.0"
itertools = ""
strum = "0.20.0"
strum_macros = "0.20.1"
rand = "0.7.3"
either = ""